RESOLVED FIXED 86611
[EFL] Fix uninitialized struct member added by r117258
https://bugs.webkit.org/show_bug.cgi?id=86611
Summary [EFL] Fix uninitialized struct member added by r117258
Thiago Marcos P. Santos
Reported 2012-05-16 05:35:53 PDT
r117258 added a new member to _Ewk_View_Smart_Class but didn't update the initialization macro.
Attachments
Patch (1.50 KB, patch)
2012-05-16 05:39 PDT, Thiago Marcos P. Santos
no flags
Patch (1.62 KB, patch)
2012-05-16 06:03 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-05-16 05:39:52 PDT
Gyuyoung Kim
Comment 2 2012-05-16 05:47:11 PDT
Comment on attachment 142228 [details] Patch I don't think this patch is able to be landed without review. Please request review.
Thiago Marcos P. Santos
Comment 3 2012-05-16 06:03:09 PDT
Thiago Marcos P. Santos
Comment 4 2012-05-16 06:04:28 PDT
This patch complements bug 85585.
WebKit Review Bot
Comment 5 2012-05-16 07:07:19 PDT
Comment on attachment 142235 [details] Patch Clearing flags on attachment: 142235 Committed r117285: <http://trac.webkit.org/changeset/117285>
WebKit Review Bot
Comment 6 2012-05-16 07:07:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.