[EFL] Fix uninitialized struct member added by r117258 https://bugs.webkit.org/show_bug.cgi?id=86611

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-05-16
Reviewed by Gustavo Noronha Silva.

When adding a new member to _Ewk_View_Smart_Class,
EWK_VIEW_SMART_CLASS_VERSION needs to be updated.

* ewk/ewk_view.h:

Canonical link: https://commits.webkit.org/104211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117285 268f45cc-cd09-0410-ab3c-d52691b4dbfc